--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <h1>Travel</h1>
     <h2></h2>
     <h3></h3>
+
+    <footer>This project was coded with ❤️ by <strong>Yandia Alexis</strong> and is <a
+            href="https://github.com/yand160/Travel-Project" target="_blank"> open sourced on Github.</a></footer>
 </body>
 
 </html>
