--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
 </head>
 
 <body>
-    <h1>Travel</h1>
-    <h2></h2>
-    <h3></h3>
+    <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Marseille</h1>
+        <h2>Capital city of Bouches-du-Rhô département</h2>
+        <h3></h3>
+        <a href="#more">Learn more</a>
+    </header>
 
     <footer>This project was coded with ❤️ by <strong>Yandia Alexis</strong> and is <a
             href="https://github.com/yand160/Travel-Project" target="_blank"> open sourced on Github.</a></footer>
