--- a/index.html
+++ b/index.html
@@ -19,21 +19,24 @@
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@100;200;300;400;600;800;900&family=Prompt:wght@300&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
     <title>Travel Project</title>
 </head>
 
 <body>
-    <header>
-        <h3>.TRAVEL.</h3>
-        <h1>Welcome to Marseille</h1>
-        <h2>Capital city of Bouches-du-Rhô département</h2>
-        <h3></h3>
-        <a href="#more">Learn more</a>
-    </header>
+    <div class="container">
+        <header>
+            <h3>.TRAVEL.</h3>
+            <h1>Welcome to Marseille</h1>
+            <h2>Capital city of Bouches-du-Rhô département</h2>
+            <h3></h3>
+            <a href="#more">Learn more</a>
+        </header>
 
-    <footer>This project was coded with ❤️ by <strong>Yandia Alexis</strong> and is <a
-            href="https://github.com/yand160/Travel-Project" target="_blank"> open sourced on Github.</a></footer>
+        <footer>This project was coded with ❤️ by <strong>Yandia Alexis</strong> and is <a
+                href="https://github.com/yand160/Travel-Project" target="_blank"> open sourced on Github.</a></footer>
+
+    </div>
 </body>
 
 </html>
