Updated footer for html and css

--- a/index.html
+++ b/index.html
@@ -33,40 +33,39 @@
             <a href="#more">Learn more</a>
         </header>
         <footer>
-            <div>
-                <h3>More about Marseille</h3>
-                <ul>
-                    <li>
-                        <a href="https://www.marseille.aeroport.fr/" target="_blank">Marseille Airport website</a>
-                    </li>
-                    <li>
-                        <a href="https://www.google.com/maps/place/Marseille,+France/@43.2772358,5.2568439,11z/data=!4m5!3m4!1s0x12c9bf4344da5333:0x40819a5fd970220!8m2!3d43.296482!4d5.36978!5m1!1e3?hl=en"
-                            target="_blank">Map of Marseille</a>
-                    </li>
-                    <li>
-                        <a href="https://www.marseille-tourisme.com/en/organize-your-stay/practical-information/move-around/"
-                            target="_blank">Marseille Public transport information</a>
-                    </li>
-                </ul>
-            </div>
-            This project was coded with ❤️ by <strong>Yandia Alexis</strong> and is
-            <div>
-                <h3>About me</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed dolorum saepe itaque quibusdam
-                    voluptatum
-                    perferendis dicta ducimus reiciendis tenetur, odit ab earum minima eius! Ad rerum perferendis minus
-                    porro possimus.
-                </p>
-            </div>
-            <div>
-                <h3>About this website</h3>
-                <p>
-                    This page was created as a project for SheCodes Responsive to develope my coding skills.
-                    <br />
-                    <a href="https://github.com/yand160/Travel-Project" target="_blank"> open sourced on Github.</a>
-                </p>
-            </div>
+            <section class="grid">
+                <div>
+                    <h3>More about Marseille</h3>
+                    <ul>
+                        <li>
+                            <a href="https://www.marseille.aeroport.fr/" target="_blank">Marseille Airport website</a>
+                        </li>
+                        <li>
+                            <a href="https://goo.gl/maps/7daUwbEPX3pQ8NWo7" target="_blank">Map of Marseille</a>
+                        </li>
+                        <li>
+                            <a href="https://www.marseille-tourisme.com/en/organize-your-stay/practical-information/move-around/"
+                                target="_blank">Marseille Public transport information</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3>About me</h3>
+                    <p>
+                        Hi, My name is Yandia and Marseille is one of my favorite cities to visit in France.
+                    </p>
+                </div>
+                <div>
+                    <h3>About this website</h3>
+                    <p>
+                        This page was created as a project for SheCodes Responsive to develope my coding skills.
+                        <br />
+                        This project was coded with ❤️ by <strong>Yandia Alexis</strong> and is
+                        <a href="https://github.com/yand160/Travel-Project" target="_blank"> open sourced on Github.</a>
+                    </p>
+                </div>
+            </section>
         </footer>
     </div>
 </body>
