--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Travel Project</title>
+    <title>Travel Marseille</title>
 </head>
 
 <body>
@@ -32,8 +32,30 @@
             <h3></h3>
             <a href="#more">Learn more</a>
         </header>
-        <footer>
+        <main>
             <section class="grid">
+                <div>
+                    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/062/088/original/viewofcity.jpeg?1673297766"
+                        alt="Marseille city view" class="img-responsive" />
+                </div>
+                <div>
+                    <h2>Why Marseille?</h2>
+                    <h3>Marseille has one of the largest ports of the Mediterranean sea.</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quia accusantium odio
+                        architecto quibusdam. Consequatur vero minus amet, ullam, neque necessitatibus, cumque
+                        libero ut quisquam vitae delectus modi culpa id.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore delectus in cumque.
+                        Nihil dolorem alias, beatae consectetur sapiente modi harum illo quaerat debitis sequi est?
+                        Sint sapiente nobis tempore!
+                    </p>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <section class="grid grid-3-columns-with-first-narrow">
                 <div>
                     <h3>More about Marseille</h3>
                     <ul>
@@ -49,7 +71,6 @@
                         </li>
                     </ul>
                 </div>
-
                 <div>
                     <h3>About me</h3>
                     <p>
