Updated html and css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@100;200;300;400;600;800;900&family=Prompt:wght@300&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="src/styles.css" />
     <title>Travel Marseille</title>
 </head>
 
@@ -26,7 +26,7 @@
             <a href="#more">Learn more</a>
         </header>
         <main>
-            <section class="grid grid-2-column">
+            <section class="grid grid-2-columns">
                 <div>
                     <img src="src/images/viewofcity.jpeg" alt="Marseille city view" width="" height=""
                         class="img-responsive" />
@@ -73,58 +73,61 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <a href="https://goo.gl/maps/ns2jkFZsm4mBhTSP8" class="btn" target="_blank"></a>
+                            <a href="https://goo.gl/maps/ns2jkFZsm4mBhTSP8" class="btn" target="_blank">Learn more</a>
                         </div>
-                        <div class="card">
-                            <div class="card-header">
-                                <img src="src/images/Notre-Dame.jpeg" alt="Notre Dame de la Garde" width="" height=""
-                                    class="img-responsive" />
-                            </div>
-                            <div class="card-body">
-                                <h4>Basilique Notre Dame de la Garde</h4>
-                                <p>
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium a ab
-                                    consequuntur,
-                                    quas officia doloribus quisquam iusto commodi dolores ducimus delectus veritatis
-                                    natus
-                                    distinctio in. Deleniti debitis temporibus voluptates animi.
-                                </p>
-                                <h5>Address:</h5>
-                                <p>Rue Fort du Sanctuaire, 13006 Marseille, France</p>
-                                <h5>What I like about Basilique Notre Dame de la Garde</h5>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex at iste nobis eos
-                                    perferendis possimus. At, eaque quaerat quidem voluptas rem labore aliquid
-                                    perferendis
-                                    maiores ut delectus nemo aut neque?
-                                </p>
-                            </div>
-                            <div class="card-footer">
-                                <a href="https://goo.gl/maps/AMM4KirzEdV6ue5q7" class="btn" target="_blank"></a>
-                            </div>
-                            <div class="card">
-                                <div class="card-header">
-                                    <img src="src/images/bakeryname.jpeg" alt="oldest bakery" width="" height=""
-                                        class="img-responsive" />
-                                </div>
-                                <div class="card-body">
-                                    <h4>Four Des Navettes</h4>
-                                    <p>
-                                        Four Des Navettes is the oldest bakery in France; It is over 100 years old. They
-                                        have been in business since 1781
-                                    </p>
-                                    <h5>Address:</h5>
-                                    <p>136 Rue Sainte, 13007 Marseille, France</p>
-                                    <h5>What I like about the bakery</h5>
-                                    <p>
-                                        Its family own and all of there bake good are made with fresh ingridents
-                                        everyday. My favorite is the Almond Macroons worth the visit.
-                                    </p>
-                                </div>
-                                <div class="card-footer">
-                                    <a href="https://goo.gl/maps/WdQpmNwRL9nvvCyHA" class="btn" target="_blank"></a>
-                                </div>
-                            </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <img src="src/images/Notre-Dame.jpeg" alt="Notre Dame de la Garde" width="" height=""
+                                class="img-responsive" />
+                        </div>
+                        <div class="card-body">
+                            <h4>Basilique Notre Dame de la Garde</h4>
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium a ab
+                                consequuntur,
+                                quas officia doloribus quisquam iusto commodi dolores ducimus delectus veritatis
+                                natus
+                                distinctio in. Deleniti debitis temporibus voluptates animi.
+                            </p>
+                            <h5>Address:</h5>
+                            <p>Rue Fort du Sanctuaire, 13006 Marseille, France</p>
+                            <h5>What I like about Basilique Notre Dame de la Garde</h5>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex at iste nobis eos
+                                perferendis possimus. At, eaque quaerat quidem voluptas rem labore aliquid
+                                perferendis
+                                maiores ut delectus nemo aut neque?
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="https://goo.gl/maps/AMM4KirzEdV6ue5q7" class="btn" target="_blank">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <img src="src/images/bakeryname.jpeg" alt="oldest bakery" width="" height=""
+                                class="img-responsive" />
+                        </div>
+                        <div class="card-body">
+                            <h4>Four Des Navettes</h4>
+                            <p>
+                                Four Des Navettes is the oldest bakery in France; It is over 100 years old. They
+                                have been in business since 1781
+                            </p>
+                            <h5>Address:</h5>
+                            <p>136 Rue Sainte, 13007 Marseille, France</p>
+                            <h5>What I like about the bakery</h5>
+                            <p>
+                                Its family own and all of there bake good are made with fresh ingridents
+                                everyday. My favorite is the Almond Macroons worth the visit.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="https://goo.gl/maps/WdQpmNwRL9nvvCyHA" class="btn" target="_blank">Learn more</a>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
         <footer>
@@ -133,10 +136,13 @@
                     <h3>More about Marseille</h3>
                     <ul>
                         <li>
-                            <a href="https://www.marseille.aeroport.fr/" target="_blank">Marseille Airport website</a>
+                            <a href="https://www.marseille.aeroport.fr/" target="_blank">Marseille
+                                Airport
+                                website</a>
                         </li>
                         <li>
-                            <a href="https://goo.gl/maps/7daUwbEPX3pQ8NWo7" target="_blank">Map of Marseille</a>
+                            <a href="https://goo.gl/maps/7daUwbEPX3pQ8NWo7" target="_blank">Map of
+                                Marseille</a>
                         </li>
                         <li>
                             <a href="https://www.marseille-tourisme.com/en/organize-your-stay/practical-information/move-around/"
@@ -147,16 +153,20 @@
                 <div>
                     <h3>About me</h3>
                     <p>
-                        Hi, My name is Yandia and Marseille is one of my favorite cities to visit in France.
+                        Hi, My name is Yandia and Marseille is one of my favorite cities to visit in
+                        France.
                     </p>
                 </div>
                 <div>
                     <h3>About this website</h3>
                     <p>
-                        This page was created as a project for SheCodes Responsive to develope my coding skills.
+                        This page was created as a project for SheCodes Responsive to develope my
+                        coding skills.
                         <br />
                         This project was coded with ❤️ by <strong>Yandia Alexis</strong> and is
-                        <a href="https://github.com/yand160/Travel-Project" target="_blank"> open sourced on Github.</a>
+                        <a href="https://github.com/yand160/Travel-Project" target="_blank"> open
+                            sourced on
+                            Github.</a>
                     </p>
                 </div>
             </section>
