--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@
                 <h3 class="text-center">My favorite places to visit in Marseille</h3>
                 <div class="grid grid-3-columns">
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header grid grid-2-columns">
                             <img src="src/images/Palais-Longchamp.jpeg" alt="palais longchamp" width="" height=""
                                 class="img-responsive" />
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11613.909191817502!2d5.3946029!3d43.3042669!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe8758c4ddd3ba377!2sPalais%20Longchamp!5e0!3m2!1sen!2sus!4v1673559356779!5m2!1sen!2sus"
+                                class="embed" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>"
                         </div>
                         <div class="card-body">
                             <h4>Palais Longchamp</h4>
@@ -73,13 +77,20 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <a href="https://goo.gl/maps/ns2jkFZsm4mBhTSP8" class="btn" target="_blank">Learn more</a>
+                            <a href="https://goo.gl/maps/u9unAEz8NhdGqoin9" class="btn" target="_blank">Learn more</a>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-header">
-                            <img src="src/images/Notre-Dame.jpeg" alt="Notre Dame de la Garde" width="" height=""
-                                class="img-responsive" />
+                            <div class="card-header grid grid-2-columns">
+                                <img src="src/images/Notre-Dame.jpeg" alt="Notre Dame de la Garde" width="" height=""
+                                    class="img-responsive" />
+
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2904.4471289693315!2d5.369049015400222!3d43.28395718424661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c9c0c976b89df5%3A0x89254f95b5ee2ded!2sBasilique%20Notre-Dame%20de%20la%20Garde!5e0!3m2!1sen!2sus!4v1673560003297!5m2!1sen!2sus"
+                                    class="embed" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
                         </div>
                         <div class="card-body">
                             <h4>Basilique Notre Dame de la Garde</h4>
@@ -101,13 +112,20 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <a href="https://goo.gl/maps/AMM4KirzEdV6ue5q7" class="btn" target="_blank">Learn more</a>
+                            <a href="https://goo.gl/maps/6PcnB1pWn7TcWdih8" class="btn" target="_blank">Learn more</a>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-header">
-                            <img src="src/images/bakeryname.jpeg" alt="oldest bakery" width="" height=""
-                                class="img-responsive" />
+                            <div class="card-header grid grid-2-columns">
+                                <img src="src/images/bakeryname.jpeg" alt="oldest bakery" width="" height=""
+                                    class="img-responsive" />
+
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2904.122025789633!2d5.364249915400384!3d43.29076618380909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c9c0c58aadad57%3A0xcd87f5d900181e64!2sLe%20Four%20des%20Navettes!5e0!3m2!1sen!2sus!4v1673560089428!5m2!1sen!2sus"
+                                    class="embed" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
                         </div>
                         <div class="card-body">
                             <h4>Four Des Navettes</h4>
