Added more info to html

--- a/index.html
+++ b/index.html
@@ -36,14 +36,23 @@
                     <h2>Why Marseille?</h2>
                     <h3>Marseille has one of the largest ports of the Mediterranean sea.</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quia accusantium odio
-                        architecto quibusdam. Consequatur vero minus amet, ullam, neque necessitatibus, cumque
-                        libero ut quisquam vitae delectus modi culpa id.
+                        Marseille is one of the Mediterranean’s major seaports and the second largest city in France, it
+                        is located on the Gulf of Lion, west
+                        of the French Riviera.
+                        Marseille is also the oldest of the large French cities, Marseille was founded as Massalia
+                        (Massilia) by Greek mariners from Phocaea in
+                        Asia Minor about 600 BC. Archaeological finds exhibited in the Museum of Antiquities in the
+                        18th-century Château Borély
+                        suggest that Phoenicians had settled there even earlier.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione tempore delectus in cumque.
-                        Nihil dolorem alias, beatae consectetur sapiente modi harum illo quaerat debitis sequi est?
-                        Sint sapiente nobis tempore!
+                        Marseille is known for many things but primarily for its unique culture and cuisine, including
+                        the garlic- and
+                        saffron-flavoured fish stew called bouillabaisse. Marseille, France, is also the birthplace of
+                        that iconic soap, <em>Savon de Marseille</em>. Since the Middle Ages, the Marseille soap
+                        has been made from olive oil without colors or preservatives. The authentic Savon de Marseille
+                        are made using centuries old methods. Marseille is a city you love to visit when you are in
+                        France.
                     </p>
                 </div>
             </section>
@@ -63,17 +72,25 @@
                         <div class="card-body">
                             <h4>Palais Longchamp</h4>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore odit eius? Illum,
-                                repudiandae odio vero nulla quae quisquam aliquam eos tempore voluptatem, magnam
-                                suscipit repellendus hic nesciunt? Eum, iure.
+                                The Palais Longchamp is a monument in the 4th arrondissement of Marseille, France. It
+                                houses the Musée des beaux-arts
+                                and Muséum d'histoire naturelle de Marseille. The surrounding Longchamp Park is listed
+                                by the French Ministry of Culture
+                                as one of the Notable Gardens of France. From each side of the water reservoir, an open
+                                colonnade leads to two museums which face a cascade on the city side, and
+                                a large garden on the park side. The site location was a central point for the European
+                                Capital of Culture title awarded to Marseille in 2013. The ‘Palais Longchamp’ hosted a
+                                zoo from 1855 to 1987, the Big Zoo of Marseille, which was also the first provincial zoo
+                                in France.
                             </p>
                             <h5>Address:</h5>
                             <p>Bd Jard. Zoologique, 13004 Marseille, France</p>
                             <h5>What I like about Palais Longchamp</h5>
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde quas iste dolores ad.
-                                Repudiandae, sit. Nisi voluptatum neque eum aperiam accusamus, ipsam repellendus
-                                temporibus eveniet architecto natus earum in suscipit!
+                                The gardens are beautiful with massive waterfalls you sit outside and listen to the
+                                waterfall. Both museums are
+                                massive and showcase paintings, sculptures, and drawings from the 17th and 18th
+                                century. You could spend your whole day browsing throughout both museums.
                             </p>
                         </div>
                         <div class="card-footer">
@@ -95,20 +112,27 @@
                         <div class="card-body">
                             <h4>Basilique Notre Dame de la Garde</h4>
                             <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium a ab
-                                consequuntur,
-                                quas officia doloribus quisquam iusto commodi dolores ducimus delectus veritatis
-                                natus
-                                distinctio in. Deleniti debitis temporibus voluptates animi.
+                                The Basilique Notre-Dame de la Garde – translated as <em>Our Lady of the Guard</em> was
+                                built in the 1850s on the foundation of
+                                Marseille's ancient fortress. The Basilique Notre-Dame de la Garde, known to local
+                                citizens as la Bonne Mère, it's a Catholic basilica in Marseille,
+                                France, and the city's best-known symbol. This monument of Marseille is located on the
+                                highest hill near the Old Port, at an altitude of 150 meters. The bell
+                                tower of Notre Dame de la Garde reaches a height of 41 metres. The golden statue of Mary
+                                dominating the basilica is
+                                11.20 metres long and weighs nearly 9,796 kg! It was made by the Christofle company and
+                                needs to be gilded with 500
+                                grams of gold every quarter century. Its construction required more than 40 years of
+                                work.
+                                The site of a popular Assumption Day pilgrimage, it is the most visited site in
+                                Marseille.
                             </p>
                             <h5>Address:</h5>
                             <p>Rue Fort du Sanctuaire, 13006 Marseille, France</p>
-                            <h5>What I like about Basilique Notre Dame de la Garde</h5>
+                            <h5>What I like about The Basilique Notre Dame de la Garde</h5>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex at iste nobis eos
-                                perferendis possimus. At, eaque quaerat quidem voluptas rem labore aliquid
-                                perferendis
-                                maiores ut delectus nemo aut neque?
+                                The Basilique Notre Dame de la Garde is a beautiful, peaceful basilica enriched with
+                                history and breathtaking views of the city.
                             </p>
                         </div>
                         <div class="card-footer">
@@ -128,17 +152,23 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h4>Four Des Navettes</h4>
+                            <h4>Le Four Des Navettes</h4>
                             <p>
-                                Four Des Navettes is the oldest bakery in France; It is over 100 years old. They
-                                have been in business since 1781
+                                Le Four Des Navettes is the oldest bakery in Marseille, they have been in business since
+                                1781. Three families have continued the legacy and tradition of this bakery from
+                                generation to generation. They continue to carry the history of the town throughout Le
+                                Four des Navettes. They are very well known for their specialty
+                                breads, pastries (Shuttle Buses which is an orange blossom-infused baguettes, Oil Pumps
+                                which is a delicately brioche, lightly sweetened and flavored with olive oil and orange
+                                blossom, and Gibassier which is a soft crunchy pastry with thin layer of sugar).
+
                             </p>
                             <h5>Address:</h5>
                             <p>136 Rue Sainte, 13007 Marseille, France</p>
                             <h5>What I like about the bakery</h5>
                             <p>
-                                Its family own and all of there bake good are made with fresh ingridents
-                                everyday. My favorite is the Almond Macroons worth the visit.
+                                Its family owned and all of their baked breads, pastries are made with fresh ingredients
+                                everyday. My favorite pastry or cookie is the Almond Macarons it’s worth the visit.
                             </p>
                         </div>
                         <div class="card-footer">
