--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         saffron-flavoured fish stew called bouillabaisse. Marseille, France, is also the birthplace of
                         that iconic soap, <em>Savon de Marseille</em>. Since the Middle Ages, the Marseille soap
                         has been made from olive oil without colors or preservatives. The authentic Savon de Marseille
-                        are made using centuries old methods. Marseille is a city you love to visit when you are in
+                        are made using centuries old methods. Marseille is a city you will love to visit when you are in
                         France.
                     </p>
                 </div>
