--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#more">Learn more</a>
         </header>
         <main>
-            <section class="grid grid-2-columns">
+            <section class="grid grid-2-column">
                 <div>
                     <img src="src/images/viewofcity.jpeg" alt="Marseille city view" width="" height=""
                         class="img-responsive" />
@@ -61,7 +61,7 @@
                 <h3 class="text-center">My favorite places to visit in Marseille</h3>
                 <div class="grid grid-3-columns">
                     <div class="card">
-                        <div class="card-header grid grid-2-columns">
+                        <div class="card-header grid grid-2-column">
                             <img src="src/images/Palais-Longchamp.jpeg" alt="palais longchamp" width="" height=""
                                 class="img-responsive" />
                             <iframe
@@ -99,7 +99,7 @@
                     </div>
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-header grid grid-2-columns">
+                            <div class="card-header grid grid-2-column">
                                 <img src="src/images/Notre-Dame.jpeg" alt="Notre Dame de la Garde" width="" height=""
                                     class="img-responsive" />
 
