Updated html and css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <h3>.TRAVEL.</h3>
             <h1>Welcome to Marseille</h1>
             <h2>Capital city of Bouches-du-Rhô département</h2>
-            <h3></h3>
             <a href="#more">Learn more</a>
         </header>
         <main>
@@ -59,7 +58,7 @@
             <section class="secondary">
                 <h2 class="text-center">PLACES</h2>
                 <h3 class="text-center">My favorite places to visit in Marseille</h3>
-                <div class="grid grid-3-columns">
+                <div class="grid grid-3-column">
                     <div class="card">
                         <div class="card-header grid grid-2-column">
                             <img src="src/images/Palais-Longchamp.jpeg" alt="palais longchamp" width="" height=""
@@ -140,7 +139,7 @@
                     </div>
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-header grid grid-2-columns">
+                            <div class="card-header grid grid-2-column">
                                 <img src="src/images/bakeryname.jpeg" alt="oldest bakery" width="" height=""
                                     class="img-responsive" />
                                 <iframe
@@ -173,6 +172,12 @@
                         </div>
                     </div>
                 </div>
+            </section>
+            <section>
+                <h2 class="text-center">Gallery</h2>
+                <h3 class="text-center">My photos from Marseille</h3>
+                <div class="grid grid-3-columns"></div>
+
             </section>
         </main>
         <footer>
